--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -294,8 +294,8 @@ header
         color: #f70000
 
 //main
-main
-  padding: 27px 32px 0
+//main
+//  padding: 27px 32px 0
 
 //main-slider
 .main-slider
