--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -8,6 +8,9 @@
     max-width: none
     padding: 0 15px
 
+  header .container
+    padding: 40px 15px 0
+
 @media only screen and (max-width : 1290px)
   .news-box
     max-width: 33%
@@ -127,6 +130,10 @@
     .container
       padding: 25px 15px 45px
 
+  header
+    .container
+      padding: 20px 15px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 670px)
   .menu
@@ -135,8 +142,7 @@
     li
       margin: 0 0 10px
 
-  header
-    top: 20px
+
 
 
 @media only screen and (max-width : 610px)
