--- a/app/css/main.css
+++ b/app/css/main.css
@@ -167,7 +167,7 @@ header {
   position: absolute;
   width: 100%;
   z-index: 5;
-  top: 41px;
+  top: 0;
   left: 0; }
   header .container {
     -webkit-box-pack: justify;
@@ -175,11 +175,13 @@ header {
             justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    background: #fff;
+    padding: 41px 15px 0; }
   header .address {
     margin: 0 50px 0 auto; }
   header .logo {
-    margin: 0 170px 0 45px; }
+    margin: 0 170px 0 30px; }
 
 .company-description {
   color: #000000;
@@ -226,7 +228,7 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 25px 30px;
+  padding: 25px 15px;
   position: relative; }
 
 .menu {
@@ -374,8 +376,8 @@ header {
       -ms-flex-align: start;
           align-items: flex-start;
   margin: 147px 0 35px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#8e4f4e), to(rgba(255, 255, 255, 0)));
-  background: linear-gradient(to bottom, #8e4f4e 0%, rgba(255, 255, 255, 0) 100%); }
+  background: -webkit-gradient(linear, left top, left bottom, from(#8e4f4e), to(rgba(188, 154, 153, 0.7)));
+  background: linear-gradient(to bottom, #8e4f4e 0%, rgba(188, 154, 153, 0.7) 100%); }
   .main-box .text {
     margin: 33px 0 60px;
     line-height: 1.44;
@@ -456,10 +458,10 @@ header {
     border-color: transparent; }
 
 .category-news {
-  color: #656565;
+  color: #232323;
   text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 300; }
+  font-size: 17px;
+  font-weight: bold; }
 
 .news-box__title {
   font-size: 17px;
@@ -833,9 +835,9 @@ footer {
          object-fit: cover; }
   .product-card__title {
     color: #222222;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
-    line-height: 2.22;
+    line-height: normal;
     letter-spacing: 0.2px; }
   .product-card .location {
     margin: 10px 0 0;
@@ -922,7 +924,9 @@ footer {
 @media only screen and (max-width: 1400px) {
   .container {
     max-width: none;
-    padding: 0 15px; } }
+    padding: 0 15px; }
+  header .container {
+    padding: 40px 15px 0; } }
 
 @media only screen and (max-width: 1290px) {
   .news-box {
@@ -1037,7 +1041,9 @@ footer {
   footer {
     padding: 0; }
     footer .container {
-      padding: 25px 15px 45px; } }
+      padding: 25px 15px 45px; }
+  header .container {
+    padding: 20px 15px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
@@ -1050,9 +1056,7 @@ footer {
         -ms-flex-align: center;
             align-items: center; }
     .menu li {
-      margin: 0 0 10px; }
-  header {
-    top: 20px; } }
+      margin: 0 0 10px; } }
 
 @media only screen and (max-width: 610px) {
   header .address {
