--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -134,6 +134,9 @@
     .container
       padding: 20px 15px
 
+  .main-box
+    min-height: 400px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 670px)
   .menu
@@ -177,6 +180,7 @@
 @media only screen and (max-width : 420px)
   .main-box
     width: 100%
+    min-height: 480px
 
   .advantages-box
     max-width: none
