--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -328,10 +328,7 @@ header
   flex-direction: column
   align-items: flex-start
   margin: 147px 0 35px
-  //background: #bc9a99
-  //background: url("../img/overlay.png") no-repeat center
-  //  size: cover
-  background: linear-gradient(to bottom, rgba(142,79,78,1) 0%,rgba(#bc9a99,.7) 100%)
+  background: linear-gradient(to bottom, rgba(#bc9a99,1) 0%,rgba(255, 255, 255,0) 100%)
   .text
     margin: 33px 0 60px
     line-height: 1.44
