--- a/app/css/main.css
+++ b/app/css/main.css
@@ -168,7 +168,8 @@ header {
   width: 100%;
   z-index: 5;
   top: 0;
-  left: 0; }
+  left: 0;
+  padding: 41px 0 0; }
   header .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -176,12 +177,11 @@ header {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    background: #fff;
-    padding: 41px 15px 0; }
+    background: #fff; }
   header .address {
     margin: 0 50px 0 auto; }
   header .logo {
-    margin: 0 170px 0 30px; }
+    margin: 0 170px 0 50px; }
 
 .company-description {
   color: #000000;
@@ -192,7 +192,8 @@ header {
 
 .header-contacts {
   position: relative;
-  padding: 0 0 0 26px; }
+  padding: 0 0 0 26px;
+  margin: 0 25px 0 0; }
   .header-contacts .phone {
     font-size: 15px;
     line-height: 1.2;
@@ -214,6 +215,15 @@ header {
     font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.13px; }
+
+.main-header {
+  padding: 0; }
+  .main-header .container {
+    padding: 40px 15px 0; }
+  .main-header .header-contacts {
+    margin: 0; }
+  .main-header .logo {
+    margin: 0 170px 0 30px; }
 
 .navigation {
   width: 100%;
@@ -255,6 +265,38 @@ header {
       color: #f70000;
       font-weight: bold;
       text-decoration: underline; }
+
+.drop-item {
+  position: relative; }
+
+.drop-menu {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  min-width: 400px;
+  max-width: 100%;
+  padding: 20px;
+  background: #fff;
+  z-index: 5;
+  display: none; }
+
+.menu-dropDown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .menu-dropDown li {
+    width: 48%;
+    margin: 0 0 10px; }
+    .menu-dropDown li a {
+      text-transform: none;
+      font-weight: normal; }
+      .menu-dropDown li a:hover {
+        font-weight: normal; }
 
 .btn-burger {
   display: -webkit-box;
@@ -814,7 +856,7 @@ footer {
   width: 304px;
   height: 436px;
   background: #fff;
-  padding: 29px 31px 28px; }
+  padding: 29px 22px 28px; }
   .product-card__img {
     width: 240px;
     height: 240px;
@@ -828,7 +870,8 @@ footer {
         -ms-flex-pack: center;
             justify-content: center;
     overflow: hidden;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin: 0 auto; }
     .product-card__img img {
       width: 100%;
       height: 100%;
@@ -920,26 +963,388 @@ footer {
       -ms-flex-pack: justify;
           justify-content: space-between; }
 
+.header {
+  position: relative;
+  background: #fff; }
+  .header .navigation {
+    background-color: #f5f5f5; }
+
+.breadcrumbs {
+  padding: 17px 32px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #ececec;
+  margin: 0 0 53px; }
+  .breadcrumbs li a {
+    letter-spacing: 0.13px;
+    font-size: 12px;
+    color: #737373;
+    margin: 0 20px 0 0; }
+    .breadcrumbs li a:after {
+      content: '>';
+      display: inline-block;
+      margin: 0 0 0 20px; }
+    .breadcrumbs li a:hover {
+      color: #f70000; }
+  .breadcrumbs li span {
+    letter-spacing: 0.13px;
+    font-size: 12px;
+    color: #737373; }
+
+h1 {
+  margin: 0 0 24px;
+  color: #232323;
+  font-size: 30px;
+  letter-spacing: 0.33px;
+  width: 100%; }
+  h1 sub {
+    font-size: 16px;
+    vertical-align: top; }
+
+.page-text {
+  margin: 62px 0 67px;
+  color: #232323;
+  font-size: 15px;
+  letter-spacing: 0.17px; }
+  .page-text p {
+    margin: 0 0 30px; }
+    .page-text p:last-child {
+      margin: 0; }
+
+.main-sale {
+  margin: 0 0 50px; }
+
+.bg-light-blue {
+  background: #f6f7fa; }
+
+.main-catalog__wrapper {
+  padding: 37px 0 0;
+  margin: 0 0 35px; }
+  .main-catalog__wrapper .product-card {
+    margin: 0 32px 35px 0; }
+    .main-catalog__wrapper .product-card:nth-child(4n+4) {
+      margin-right: 0; }
+  .main-catalog__wrapper .product-card__title {
+    min-height: 50px;
+    font-size: 16px; }
+  .main-catalog__wrapper .container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+
+.packing-box__val-wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.main-news .news-box {
+  margin: 0 0 30px; }
+
+.pagination {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 14px auto 100px; }
+  .pagination li {
+    margin: 0 10px 0 0; }
+    .pagination li:last-child {
+      margin: 0; }
+    .pagination li a {
+      color: #dbdbdb;
+      font-size: 17px;
+      text-transform: uppercase;
+      font-weight: 700; }
+    .pagination li .active {
+      color: #f70000; }
+
+.product-wrapper {
+  padding: 49px 0; }
+  .product-wrapper .container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+
+.product-wrapper__title {
+  color: #f70000;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.33px; }
+
+.product-wrapper__img {
+  width: 240px;
+  height: 240px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  overflow: hidden; }
+
+.product-wrapper__content {
+  width: calc(100% - 240px);
+  padding: 0 0 0 58px; }
+  .product-wrapper__content .text {
+    color: #222222;
+    margin: 39px 0 44px;
+    letter-spacing: 0.17px;
+    font-size: 15px; }
+
+.product-wrapper__characteristics {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  .product-wrapper__characteristics .box {
+    width: auto;
+    margin: 0 0 36px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #222222;
+    font-size: 15px;
+    letter-spacing: 0.17px;
+    padding: 0 39px 0 0; }
+    .product-wrapper__characteristics .box .box-icon {
+      width: 43px;
+      height: 43px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .product-wrapper__characteristics .box .box-text {
+      width: calc(100% - 43px);
+      padding: 0 0 0 16px; }
+    .product-wrapper__characteristics .box:last-child {
+      width: 100%;
+      margin: 0; }
+    .product-wrapper__characteristics .box h4 {
+      color: #f70000;
+      font-weight: 700;
+      font-size: 15px;
+      margin: 0 0 7px; }
+
+.application {
+  padding: 43px 0; }
+
+.application-box {
+  margin: 0 0 0 308px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  font-size: 15px;
+  letter-spacing: 0.17px; }
+  .application-box h4 {
+    font-weight: 700;
+    color: #f70000;
+    margin: 0 0 15px; }
+  .application-box .btn {
+    margin: 30px 0 37px;
+    width: 220px;
+    padding: 14px 0; }
+  .application-box .link {
+    color: #222222;
+    text-decoration: underline;
+    letter-spacing: 0.17px; }
+    .application-box .link:hover {
+      text-decoration: none; }
+
+.maps-main {
+  height: 626px;
+  width: 100%;
+  position: relative;
+  margin: 0 0 46px; }
+
+.main-contacts h1 {
+  margin: 0 0 49px; }
+
+.main-contacts__wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.main-contacts__box {
+  max-width: 620px;
+  width: 100%;
+  color: #313131;
+  font-size: 15px;
+  margin: 0 0 50px; }
+  .main-contacts__box .company-name {
+    color: #f70000;
+    margin: 0 0 33px; }
+  .main-contacts__box p {
+    margin: 0 0 17px; }
+  .main-contacts__box .address {
+    font-size: 15px; }
+    .main-contacts__box .address p {
+      margin: 0; }
+  .main-contacts__box .phone {
+    margin: 21px 0; }
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  form label {
+    position: relative;
+    margin: 0 0 16px;
+    width: 304px; }
+    form label:last-child {
+      width: 468px; }
+  form .btn {
+    border-radius: 0;
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+    width: 126px;
+    height: 40px;
+    padding: 0;
+    cursor: pointer;
+    border: none; }
+
+label {
+  display: block; }
+
+input {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 17px;
+  border: 1px solid #dddddd;
+    border-radius: 0;
+  font-family: "Open Sans", sans-serif;
+  outline: none;
+  height: 40px;
+  background: #fff; }
+  input:hover, input:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none; }
+
+.text-form {
+  position: absolute;
+  left: 17px;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  color: #b2b2b2;
+  font-size: 13px; }
+  .text-form sub {
+    color: #f70000;
+    vertical-align: top;
+    font-size: 10px; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1400px) {
   .container {
     max-width: none;
     padding: 0 15px; }
-  header .container {
-    padding: 40px 15px 0; } }
+  header {
+    padding: 40px 0 0; } }
 
-@media only screen and (max-width: 1290px) {
+@media only screen and (max-width: 1350px) {
+  .main-catalog__wrapper .product-card {
+    margin: 0 18px 20px 0; } }
+
+@media only screen and (max-width: 1300px) {
   .news-box {
     max-width: 33%; }
   .advantages-box {
-    margin: 0 0 20px; } }
+    margin: 0 0 20px; }
+  .main-catalog__wrapper .container {
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+  .main-catalog__wrapper .product-card {
+    margin: 0 0 20px; }
+  .main-contacts__box {
+    max-width: 49%; }
+  form label {
+    width: 270px; } }
 
 @media only screen and (max-width: 1200px) {
   main {
     padding: 0; }
+  .main-header .logo {
+    margin: 0 auto 0 0; }
   header .logo {
-    margin: 0 auto 0 0; } }
+    margin: 0 auto 0 0; }
+  .header-contacts {
+    margin: 0; }
+  form label {
+    width: 300px; }
+  .main-contacts__box {
+    max-width: none; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 1040px) {
@@ -971,7 +1376,11 @@ footer {
     width: calc(100% - 300px);
     padding: 0 40px 0 0; }
   .advantages-box {
-    max-width: 49%; } }
+    max-width: 49%; }
+  .drop-menu {
+    min-width: 330px; }
+  form label {
+    width: 30%; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 820px) {
@@ -1043,10 +1452,21 @@ footer {
     padding: 0; }
     footer .container {
       padding: 25px 15px 45px; }
-  header .container {
-    padding: 20px 15px; }
+  .main-header .container {
+    padding: 20px 15px 10px; }
   .main-box {
-    min-height: 400px; } }
+    min-height: 400px; }
+  .header-contacts {
+    margin: 0; }
+  header {
+    padding: 20px 0 10px; }
+  .product-wrapper__content {
+    width: 100%;
+    padding: 0; }
+  .product-wrapper__img {
+    margin: 0 auto 30px; }
+  .application-box {
+    margin: 0; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 670px) {
@@ -1059,7 +1479,18 @@ footer {
         -ms-flex-align: center;
             align-items: center; }
     .menu li {
-      margin: 0 0 10px; } }
+      width: 100%;
+      margin: 0 0 10px; }
+      .menu li a {
+        text-align: center; }
+  .drop-menu {
+    min-width: auto;
+    position: relative; }
+  .menu-dropDown li a {
+    padding: 0 5px;
+    text-align: left; }
+  form label {
+    width: 48%; } }
 
 @media only screen and (max-width: 610px) {
   header .address {
@@ -1086,7 +1517,27 @@ footer {
   .news-box__title {
     margin: 20px 0; }
   h2 {
-    font-size: 26px; } }
+    font-size: 26px; }
+  h1 {
+    font-size: 26px; }
+  .product-wrapper__title {
+    font-size: 24px; }
+  .product-wrapper__content .text {
+    margin: 20px 0; }
+  .breadcrumbs {
+    margin: 0 0 30px; }
+  .page-text {
+    margin: 30px 0; }
+  form label {
+    width: 100%; }
+  form button {
+    margin: 0 auto; }
+  .main-contacts__box {
+    margin: 0 0 30px; }
+  .main-contacts h1 {
+    margin: 0 0 30px; }
+  .maps-main {
+    height: 300px; } }
 
 @media only screen and (max-width: 420px) {
   .main-box {
@@ -1121,4 +1572,8 @@ footer {
   .header-contacts {
     padding: 0; }
     .header-contacts:before {
-      display: none; } }
+      display: none; }
+  .menu-dropDown li {
+    width: 100%; }
+    .menu-dropDown li a {
+      padding: 0; } }
