--- a/app/css/main.css
+++ b/app/css/main.css
@@ -164,12 +164,10 @@ strong {
   font-weight: bold; }
 
 header {
-  position: absolute;
+  position: relative;
   width: 100%;
-  z-index: 5;
-  top: 0;
-  left: 0;
-  padding: 41px 0 0; }
+  z-index: 2;
+  padding: 20px 0; }
   header .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -181,7 +179,7 @@ header {
   header .address {
     margin: 0 50px 0 auto; }
   header .logo {
-    margin: 0 170px 0 50px; }
+    margin: 0 0 0 50px; }
 
 .company-description {
   color: #000000;
@@ -216,19 +214,8 @@ header {
     line-height: 1.5;
     letter-spacing: 0.13px; }
 
-.main-header {
-  padding: 0; }
-  .main-header .container {
-    padding: 40px 15px 0; }
-  .main-header .header-contacts {
-    margin: 0; }
-  .main-header .logo {
-    margin: 0 170px 0 30px; }
-
 .navigation {
-  width: 100%;
   background: #fff;
-  margin: 13px 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -238,7 +225,6 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 25px 15px;
   position: relative; }
 
 .menu {
@@ -254,20 +240,21 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%; }
-  .menu li a {
-    text-transform: uppercase;
-    line-height: 1.29;
-    letter-spacing: 0.35px;
-    font-size: 14px;
-    color: #000000;
-    font-weight: 600; }
-    .menu li a:hover {
-      color: #f70000;
-      font-weight: bold;
-      text-decoration: underline; }
-
-.drop-item {
-  position: relative; }
+  .menu li {
+    margin: 0 30px 0 0; }
+    .menu li:last-child {
+      margin: 0; }
+    .menu li a {
+      text-transform: uppercase;
+      line-height: 1.29;
+      letter-spacing: 0.35px;
+      font-size: 14px;
+      color: #000000;
+      font-weight: 600; }
+      .menu li a:hover {
+        color: #f70000;
+        font-weight: bold;
+        text-decoration: underline; }
 
 .drop-menu {
   position: absolute;
@@ -297,22 +284,13 @@ header {
       font-weight: normal; }
       .menu-dropDown li a:hover {
         font-weight: normal; }
+  .menu-dropDown .w-100 {
+    width: 100%; }
 
-.btn-burger {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0 77px 0 0;
-  width: 18px;
-  height: 16px;
-  min-width: 18px;
-  cursor: pointer; }
+.drop-item {
+  position: relative; }
+  .drop-item:hover .drop-menu {
+    display: block; }
 
 .btn-burger__mobile {
   display: none;
@@ -418,7 +396,7 @@ header {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  margin: 147px 0 35px;
+  margin: 0 0 35px;
   background: -webkit-gradient(linear, left top, left bottom, from(#bc9a99), to(rgba(255, 255, 255, 0)));
   background: linear-gradient(to bottom, #bc9a99 0%, rgba(255, 255, 255, 0) 100%); }
   .main-box .text {
@@ -963,12 +941,6 @@ footer {
       -ms-flex-pack: justify;
           justify-content: space-between; }
 
-.header {
-  position: relative;
-  background: #fff; }
-  .header .navigation {
-    background-color: #f5f5f5; }
-
 .breadcrumbs {
   padding: 17px 32px;
   width: 100%;
@@ -1266,9 +1238,9 @@ form {
     border-radius: 0;
     -webkit-transition: .3s ease;
     transition: .3s ease;
-    width: 126px;
+    width: auto;
     height: 40px;
-    padding: 0;
+    padding: 0 30px;
     cursor: pointer;
     border: none; }
 
@@ -1309,9 +1281,7 @@ input {
 @media only screen and (max-width: 1400px) {
   .container {
     max-width: none;
-    padding: 0 15px; }
-  header {
-    padding: 40px 0 0; } }
+    padding: 0 15px; } }
 
 @media only screen and (max-width: 1350px) {
   .main-catalog__wrapper .product-card {
@@ -1335,10 +1305,8 @@ input {
 @media only screen and (max-width: 1200px) {
   main {
     padding: 0; }
-  .main-header .logo {
-    margin: 0 auto 0 0; }
   header .logo {
-    margin: 0 auto 0 0; }
+    margin: 0; }
   .header-contacts {
     margin: 0; }
   form label {
@@ -1380,9 +1348,31 @@ input {
   .drop-menu {
     min-width: 330px; }
   form label {
-    width: 30%; } }
+    width: 30%; }
+  .menu li {
+    margin: 0 20px 0 0; } }
 
 /* Small Devices, Tablets */
+@media only screen and (max-width: 920px) {
+  .btn-burger__mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .navigation {
+    display: none;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    width: 100%; }
+  .menu {
+    margin: 10px 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%; }
+    .menu li {
+      margin: 0; } }
+
 @media only screen and (max-width: 820px) {
   .company-description {
     display: none; }
@@ -1390,19 +1380,10 @@ input {
     padding: 30px; } }
 
 @media only screen and (max-width: 768px) {
-  .navigation {
-    display: none;
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1; }
   .btn-burger {
     display: none; }
   .btn-search {
     display: none; }
-  .btn-burger__mobile {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
   .main-box {
     width: 400px;
     padding: 30px; }
@@ -1452,12 +1433,8 @@ input {
     padding: 0; }
     footer .container {
       padding: 25px 15px 45px; }
-  .main-header .container {
-    padding: 20px 15px 10px; }
   .main-box {
     min-height: 400px; }
-  .header-contacts {
-    margin: 0; }
   header {
     padding: 20px 0 10px; }
   .product-wrapper__content {
