--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -8,9 +8,6 @@
     max-width: none
     padding: 0 15px
 
-  header
-    padding: 40px 0 0
-
 @media only screen and (max-width : 1350px)
   .main-catalog__wrapper .product-card
     margin: 0 18px 20px 0
@@ -38,11 +35,8 @@
   main
     padding: 0
 
-  .main-header .logo
-    margin: 0 auto 0 0
-
   header .logo
-    margin: 0 auto 0 0
+    margin: 0
 
   .header-contacts
     margin: 0
@@ -92,8 +86,27 @@
   form label
     width: 30%
 
+  .menu li
+    margin: 0 20px 0 0
+
 
 /* Small Devices, Tablets */
+@media only screen and (max-width : 920px)
+  .btn-burger__mobile
+    display: flex
+
+  .navigation
+    display: none
+    order: 1
+    width: 100%
+
+  .menu
+    margin: 10px 0
+    justify-content: space-between
+    width: 100%
+    li
+      margin: 0
+
 @media only screen and (max-width : 820px)
   .company-description
     display: none
@@ -102,20 +115,12 @@
     padding: 30px
 
 
-
 @media only screen and (max-width : 768px)
-  .navigation
-    display: none
-    order: 1
-
   .btn-burger
     display: none
 
   .btn-search
     display: none
-
-  .btn-burger__mobile
-    display: flex
 
   .main-box
     width: 400px
@@ -166,14 +171,10 @@
     .container
       padding: 25px 15px 45px
 
-  .main-header .container
-    padding: 20px 15px 10px
 
   .main-box
     min-height: 400px
 
-  .header-contacts
-    margin: 0
 
   header
     padding: 20px 0 10px
