--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -155,12 +155,10 @@ strong
 
 //header
 header
-  position: absolute
+  position: relative
   width: 100%
-  z-index: 5
-  top: 0
-  left: 0
-  padding: 41px 0 0
+  z-index: 2
+  padding: 20px 0
   .container
     justify-content: space-between
     align-items: center
@@ -168,7 +166,7 @@ header
   .address
     margin: 0 50px 0 auto
   .logo
-    margin: 0 170px 0 50px
+    margin: 0 0 0 50px
 
 .company-description
   color: #000000
@@ -202,25 +200,12 @@ header
     line-height: 1.5
     letter-spacing: 0.13px
 
-.main-header
-  padding: 0
-  .container
-    padding: 40px 15px 0
-  .header-contacts
-    margin: 0
-  .logo
-    margin: 0 170px 0 30px
-
-
 //navigation
 .navigation
-  width: 100%
   background: #fff
-  margin: 13px 0 0
   display: flex
   align-items: center
   justify-content: space-between
-  padding: 25px 15px
   position: relative
 
 .menu
@@ -230,6 +215,9 @@ header
   justify-content: space-between
   width: 100%
   li
+    margin: 0 30px 0 0
+    &:last-child
+      margin: 0
     a
       text-transform: uppercase
       line-height: 1.29
@@ -242,8 +230,7 @@ header
         font-weight: bold
         text-decoration: underline
 
-.drop-item
-  position: relative
+
 
 .drop-menu
   position: absolute
@@ -268,18 +255,24 @@ header
       font-weight: normal
       &:hover
         font-weight: normal
+  .w-100
+    width: 100%
 
+.drop-item
+  position: relative
+  &:hover
+    .drop-menu
+      display: block
 
-
-.btn-burger
-  display: flex
-  align-items: center
-  justify-content: center
-  margin: 0 77px 0 0
-  width: 18px
-  height: 16px
-  min-width: 18px
-  cursor: pointer
+//.btn-burger
+//  display: flex
+//  align-items: center
+//  justify-content: center
+//  margin: 0 77px 0 0
+//  width: 18px
+//  height: 16px
+//  min-width: 18px
+//  cursor: pointer
 
 .btn-burger__mobile
   display: none
@@ -357,7 +350,6 @@ header
   top: 50%
   transform: translate(-50%,-50%)
 
-
 .main-box
   width: 662px
   min-height: 494px
@@ -365,7 +357,7 @@ header
   display: flex
   flex-direction: column
   align-items: flex-start
-  margin: 147px 0 35px
+  margin: 0 0 35px
   background: linear-gradient(to bottom, rgba(#bc9a99,1) 0%,rgba(255, 255, 255,0) 100%)
   .text
     margin: 33px 0 60px
@@ -815,12 +807,6 @@ footer
   justify-content: space-between
 
 //header
-.header
-  position: relative
-  background: #fff
-  .navigation
-    background-color: #f5f5f5
-
 .breadcrumbs
   padding: 17px 32px
   width: 100%
@@ -1061,9 +1047,9 @@ form
   .btn
     border-radius: 0
     transition: .3s ease
-    width: 126px
+    width: auto
     height: 40px
-    padding: 0
+    padding: 0 30px
     cursor: pointer
     border: none
 
