--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -107,12 +107,19 @@
     li
       margin: 0
 
+  .news-box
+    padding: 30px
+
+  .news-box__title
+    font-size: 15px
+
 @media only screen and (max-width : 820px)
   .company-description
     display: none
 
-  .news-box
-    padding: 30px
+
+
+
 
 
 @media only screen and (max-width : 768px)
@@ -214,6 +221,9 @@
   form label
     width: 48%
 
+  .certificate-box
+    width: 33%
+
 @media only screen and (max-width : 610px)
   header .address
     display: none
@@ -274,6 +284,8 @@
   .maps-main
     height: 300px
 
+  .certificate-box
+    width: 49%
 
 @media only screen and (max-width : 420px)
   .main-box
