--- a/app/css/main.css
+++ b/app/css/main.css
@@ -65,7 +65,28 @@ body {
   color: #232323; }
 
 html, body {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  height: 100%; }
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%; }
+
+.content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto; }
+
+footer {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto; }
 
 img {
   display: block;
@@ -581,7 +602,16 @@ header {
   padding: 49px 0 46px; }
 
 .reviews-box .icon {
-  width: 55px; }
+  width: 95px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .reviews-box .name-user {
   width: 100%;
@@ -1276,6 +1306,73 @@ input {
     vertical-align: top;
     font-size: 10px; }
 
+.news-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 40px 0; }
+
+.news-page__content {
+  width: calc(100% - 550px);
+  padding: 0 40px 0 0;
+  margin: 0 0 40px; }
+  .news-page__content p {
+    margin: 0 0 20px; }
+    .news-page__content p:last-child {
+      margin: 0; }
+
+.news-page__img {
+  width: 550px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 0 40px; }
+
+.certificate-wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.certificate-box {
+  width: 19%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 0 20px; }
+  .certificate-box img {
+    width: 100%; }
+
+.certificate-section {
+  margin: 30px 0 0; }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1400px) {
@@ -1371,13 +1468,15 @@ input {
             justify-content: space-between;
     width: 100%; }
     .menu li {
-      margin: 0; } }
+      margin: 0; }
+  .news-box {
+    padding: 30px; }
+  .news-box__title {
+    font-size: 15px; } }
 
 @media only screen and (max-width: 820px) {
   .company-description {
-    display: none; }
-  .news-box {
-    padding: 30px; } }
+    display: none; } }
 
 @media only screen and (max-width: 768px) {
   .btn-burger {
@@ -1467,7 +1566,9 @@ input {
     padding: 0 5px;
     text-align: left; }
   form label {
-    width: 48%; } }
+    width: 48%; }
+  .certificate-box {
+    width: 33%; } }
 
 @media only screen and (max-width: 610px) {
   header .address {
@@ -1514,7 +1615,9 @@ input {
   .main-contacts h1 {
     margin: 0 0 30px; }
   .maps-main {
-    height: 300px; } }
+    height: 300px; }
+  .certificate-box {
+    width: 49%; } }
 
 @media only screen and (max-width: 420px) {
   .main-box {
