--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -72,6 +72,18 @@ body
   
 html, body  
   overflow-x: hidden
+  height: 100%
+
+.wrapper
+  display: flex
+  flex-direction: column
+  min-height: 100%
+
+.content
+  flex: 1 0 auto
+
+footer
+  flex: 0 0 auto
 
 img
   display: block
@@ -500,7 +512,11 @@ header
 
 .reviews-box
   .icon
-    width: 55px
+    width: 95px
+    display: flex
+    align-items: center
+    justify-content: center
+
   .name-user
     width: 100%
     display: flex
@@ -1082,6 +1098,48 @@ input
     vertical-align: top
     font-size: 10px
 
+//.news-page
+.news-page
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+  justify-content: space-between
+  margin: 40px 0
+
+.news-page__content
+  width: calc(100% - 550px)
+  padding: 0 40px 0 0
+  margin: 0 0 40px
+  p
+    margin: 0 0 20px
+    &:last-child
+      margin: 0
+
+.news-page__img
+  width: 550px
+  display: flex
+  align-items: center
+  justify-content: center
+  margin: 0 0 40px
+
+.certificate-wrapper
+  width: 100%
+  display: flex
+  align-items: flex-start
+  justify-content: space-around
+  flex-wrap: wrap
+
+.certificate-box
+  width: 19%
+  display: flex
+  align-items: center
+  justify-content: center
+  margin: 0 0 20px
+  img
+    width: 100%
+
+.certificate-section
+  margin: 30px 0 0
 
 
 
